[gd_scene load_steps=17 format=2]

[ext_resource path="res://source/assets/scripts/server_handlers/network_processors/network_setup.gd" type="Script" id=1]
[ext_resource path="res://source/fonts/oxygen/Oxygen-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://source/fonts/oxygen/Oxygen-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://source/fonts/roboto/roboto.tres" type="DynamicFont" id=4]
[ext_resource path="res://source/scenes/GUI/background.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/scenes/OVERLAY/elements/floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/assets/sprites/GUI/lan_logo.svg" type="Texture" id=7]
[ext_resource path="res://source/fonts/oxygen/oxygen_bold.tres" type="DynamicFont" id=8]
[ext_resource path="res://source/scenes/OVERLAY/elements/button.tscn" type="PackedScene" id=9]
[ext_resource path="res://source/fonts/oxygen/oxygen_regular.tres" type="DynamicFont" id=10]
[ext_resource path="res://source/assets/scripts/ui_element_handlers/UI.gd" type="Script" id=11]
[ext_resource path="res://source/assets/sprites/GUI/background_lobby.svg" type="Texture" id=12]
[ext_resource path="res://source/scenes/OVERLAY/elements/wall.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 88
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" parent="." instance=ExtResource( 5 )]

[node name="multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.5199
margin_right = 2.5199
rect_pivot_offset = Vector2( -2200.59, -462.965 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_server" parent="multiplayer_configure" instance=ExtResource( 9 )]
margin_left = 810.0
margin_top = 424.0
margin_right = 1110.0
margin_bottom = 496.0

[node name="Label" type="Label" parent="multiplayer_configure/create_server"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -36.0
margin_right = 150.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CREATE SERVER"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="join_server" parent="multiplayer_configure" instance=ExtResource( 9 )]
margin_left = 810.0
margin_top = 504.0
margin_right = 1110.0
margin_bottom = 576.0

[node name="Label" type="Label" parent="multiplayer_configure/join_server"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -233.0
margin_top = -36.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "JOIN SERVER"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lan_logo" type="Sprite" parent="multiplayer_configure/join_server"]
position = Vector2( 33.5, 36 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="return" parent="multiplayer_configure" instance=ExtResource( 9 )]
margin_left = 810.0
margin_top = 584.0
margin_right = 1110.0
margin_bottom = 656.0

[node name="Label" type="Label" parent="multiplayer_configure/return"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -36.0
margin_right = 150.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RETURN"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="username" type="Panel" parent="multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username_text_edit" type="LineEdit" parent="multiplayer_configure/username"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -403.0
margin_top = -243.0
margin_right = 403.0
margin_bottom = -138.0
custom_fonts/font = ExtResource( 4 )
custom_colors/selection_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
align = 1
placeholder_text = "Enter username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" parent="multiplayer_configure/username/username_text_edit" instance=ExtResource( 9 )]
margin_left = 255.623
margin_top = 129.885
margin_right = 555.623
margin_bottom = 201.885

[node name="Label" type="Label" parent="multiplayer_configure/username/username_text_edit/confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONFIRM"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="background_lobby" type="Node2D" parent="."]
z_index = -1

[node name="background_lobby" type="Sprite" parent="background_lobby"]
position = Vector2( 960, 540 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="wall-L" parent="background_lobby/background_lobby" instance=ExtResource( 13 )]
position = Vector2( -960.5, 0 )

[node name="wall-R" parent="background_lobby/background_lobby" instance=ExtResource( 13 )]
position = Vector2( 960.5, 0 )

[node name="ceiling" parent="background_lobby/background_lobby" instance=ExtResource( 6 )]
position = Vector2( 0, -603 )

[node name="floor" parent="background_lobby" instance=ExtResource( 6 )]
position = Vector2( 960, 1016 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource( 11 )

[node name="start_game" parent="UI" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="UI/start_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -32.0
margin_right = 74.5
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="device_ip_address" type="Label" parent="UI"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -56.0
margin_right = 319.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.439216, 0.666667, 1, 0.27451 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="UI"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = 60.0
margin_right = 116.5
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.666667, 1, 0.27451 )
text = "WAITING FOR PLAYERS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_locations" type="Node" parent="."]

[node name="1" type="Position2D" parent="spawn_locations"]
position = Vector2( 384, 860 )

[node name="2" type="Position2D" parent="spawn_locations"]
position = Vector2( 768, 860 )

[node name="3" type="Position2D" parent="spawn_locations"]
position = Vector2( 1152, 860 )

[node name="4" type="Position2D" parent="spawn_locations"]
position = Vector2( 1536, 860 )

[connection signal="pressed" from="multiplayer_configure/create_server" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="multiplayer_configure/join_server" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="multiplayer_configure/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="multiplayer_configure/username/username_text_edit/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="UI/start_game" to="." method="_on_start_game_pressed"]
